--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,3 +1,10 @@
+:root {
+  --branding-color: white;
+  --primary-color: salmon;
+  --heading-font-family: "playfair display", serif;
+  --default-font-family: "poppins", sans-serif;
+}
+
 .poppins-medium {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
@@ -8,4 +15,58 @@
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-style: normal;
+}
+
+body {
+  font: var(--default-font-family);
+}
+
+.hero {
+  text-align: center;
+  background: var(--primary-color);
+  padding: 20px;
+}
+
+.hero p {
+  margin: 0;
+  color: black;
+  font: 36px;
+  font-weight: normal;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: black;
+  font-family: var(--heading-font-family);
+  font-weight: bold;
+}
+h1 {
+  line-height: 1.5;
+  font-size: 96px;
+}
+
+p {
+  font-weight: bold;
+  padding: 15px 30px;
+}
+
+.hero h2 {
+  font-weight: normal;
+  line-height: 1.5;
+  font-size: 24px;
+  font-family: var(--heading-font-family);
+  margin-bottom: 5;
+}
+
+.btn-branding {
+  background: var(--branding-color);
+  color: white;
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
