--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -64,7 +64,7 @@ p {
 
 .btn-branding {
   background: var(--branding-color);
-  color: white;
+  color: black;
   border-radius: 4px;
   font-size: 18px;
   line-height: 27px;
