--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -5,33 +5,21 @@
   --default-font-family: "poppins", sans-serif;
 }
 
-.poppins-medium {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.poppins-bold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
 body {
-  font: var(--default-font-family);
+  font-family: var(--default-font-family);
 }
 
 .hero {
   text-align: center;
   background: var(--primary-color);
-  padding: 20px;
+  padding: 160px 20px;
 }
 
 .hero p {
   margin: 0;
   color: black;
-  font: 36px;
-  font-weight: normal;
+  font-size: 36px;
+  font-weight: bold;
 }
 
 h1,
@@ -50,8 +38,9 @@ h1 {
 }
 
 p {
-  font-weight: bold;
-  padding: 15px 30px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 
 .hero h2 {
@@ -59,7 +48,6 @@ p {
   line-height: 1.5;
   font-size: 24px;
   font-family: var(--heading-font-family);
-  margin-bottom: 5;
 }
 
 .btn-branding {
@@ -70,24 +58,21 @@ p {
   line-height: 27px;
   padding: 15px 30px;
 }
+
 .project-desciption {
   padding: 120px 60p;
 }
 
-@media (max-width: 960px) {
+@media (max-width: 900px) {
+  h1 {
+    font-size: 44px;
+    line-height: 2;
+  }
   .project-desciption {
     padding: 0;
     text-align: center;
   }
-}
-@media (max-width: 900px) {
-  h1 {
-    line-height: 1.5;
-  }
-  .project-desciption {
-    padding: o;
-    text-align: center;
-  }
+
   h2 {
     font-size: 44px;
   }
@@ -95,12 +80,11 @@ p {
     padding: 80px 20px;
   }
 }
-.btn-learn {
-  background: salmon;
-  color: black;
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
   border-radius: 4px;
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
-  margin-bottom: 20px;
 }
