--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -34,7 +34,7 @@ h6 {
 }
 h1 {
   line-height: 1.5;
-  font-size: 96px;
+  font-size: 60px;
 }
 
 p {
@@ -72,8 +72,11 @@ p {
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
-    line-height: 2;
+    line-height: 56px;
   }
+
+  .about-section{text-align: center;
+                  padding:0;}
   .project-desciption {
     padding: 0;
     text-align: center;
@@ -104,3 +107,16 @@ p {
   line-height: 27px;
   padding: 15px 30px;
 }
+
+.about-section h1{font-size: 24px;
+                  line-height: 80px;
+                margin-bottom: 5px;}
+
+.about-section h2{font-size: 18px;
+                  font-family: var(--default-font-family);
+                margin-bottom:5px; }
+                .about-section p{margin-bottom: 5px;} 
+
+.about-section {padding: 160px 20px;}
+
+.about-section-content{margin: 30px;}                               
