--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -75,8 +75,10 @@ p {
     line-height: 56px;
   }
 
-  .about-section{text-align: center;
-                  padding:0;}
+  .content-container {
+    text-align: center;
+    padding: 0;
+  }
   .project-desciption {
     padding: 0;
     text-align: center;
@@ -108,15 +110,35 @@ p {
   padding: 15px 30px;
 }
 
-.about-section h1{font-size: 24px;
-                  line-height: 80px;
-                margin-bottom: 5px;}
+.content h1 {
+  font-size: 64px;
+  line-height: 80px;
+  margin-bottom: 5px;
+}
 
-.about-section h2{font-size: 18px;
-                  font-family: var(--default-font-family);
-                margin-bottom:5px; }
-                .about-section p{margin-bottom: 5px;} 
+.content h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+  margin-bottom: 5px;
+}
 
-.about-section {padding: 160px 20px;}
+.content p {
+  margin-bottom: 5px;
+  font-size: 14px;
+  margin: 0px;
+}
 
-.about-section-content{margin: 30px;}                               
+.content h3 {
+  font-size: 24px;
+  font-family: var(--default-font-family);
+  line-height: 1, 5px;
+  margin: 20px 0 0;
+}
+
+.content-container {
+  padding: 160px 20px;
+}
+
+.content-container {
+  margin: 30px;
+}
